--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
 }
-
+body{
+      background-color: rgb(210, 210, 210);
+}
 #logo {
     width: 90px;
     height: 24px;
@@ -12,7 +14,7 @@
 .anuncio {
     margin-bottom: 40px;
     height: 30%;
-    background: url(../imagens/anuncio.png);
+    background: url(../imagens/anuncios/anuncio4.png);
     background-size: 90%;
     background-repeat: no-repeat;
     margin-top: 2rem;
