--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,6 +1,6 @@
+#produto{
 
-
-
+}
 #produto:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 1px 1px 12px 9px, rgba(0, 0, 0, 0.3) 0px 1px 1px 1px;
 }
