--- a/css/login.css
+++ b/css/login.css
@@ -1,15 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-
+body{
+  background-color: rgb(210, 210, 210);
+ font-family: 'Times New Roman', Times, serif;
+}
 :root {
-  --text-dark: #7a260f;
+  --text-dark: #3f1609;
   --text-light: #7a260f;
   --primary: #3671fd;
   --primary-lighter: hsl(240, 33%, 86%);
   --primary-gradient: linear-gradient(to right, #3671fd, #3671fd);
 }
 
-*,
-*::before,
+*::after,
 *::after {
   margin: 0;
   padding: 0;
@@ -18,7 +19,6 @@
 
 a,
 button {
-  all: unset;
   cursor: pointer;
 }
 
@@ -28,85 +28,93 @@ img {
   display: block;
 }
 
-.partelogin {
+.login-body {
   font-family: Poppins, sans-serif;
-  min-height: 50vh;
-  background-color: #f5f9ff;
+  min-height: 100vh;
+  background-color: #b0b0b075;
   display: flex;
   justify-content: center;
 }
 
-.container {
-  max-width: 1150px;
+.login-container {
+  max-width: 1070px;
   width: 100%;
   display: flex;
-  margin-inline: 6em;
+  margin-inline: 1rem;
 }
 
 .image-section {
-  width: 40%;
+  width: 50%;
   position: relative;
-  margin-top: 5%;
-  margin-bottom:5%;
-  
+  margin-top: 1%;
+  margin-bottom: 1%;
+
 }
+
 .image-wrapper {
   width: 100%;
   height: 100%;
 }
+
 .image-wrapper img {
   object-fit: cover;
 }
 
-.content-container {
-  background-color: hsla(0, 0%, 100%, 0.3);
+.conte-container {
+  background-color: hsla(0, 3%, 94%, 0.3);
   backdrop-filter: blur(30px);
-  padding: 2rem;
-  width: 80%;
+  padding: 2.3rem;
+  width: 82%;
+  height: 23%;
   color: var(--text-dark);
   border-radius: 4px;
   border: 1px solid hsl(0 100% 100% / 0.3);
 
   position: absolute;
-  top: 83%;
-  left: 41%;
+  top: 88%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
-.content-container h1 {
+
+.conte-container h1 {
   font-weight: 600;
-  font-size: 1.3em;
-  margin-bottom: 1rem;
+  font-size: 1rem;
+  margin-bottom: -1.-1rem;
+  margin-top: -1.1rem;
+
 }
-.content-container span {
+
+.conte-container span {
   background: var(--primary-gradient);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-@media screen and (max-width: 60rem) {
-  .container {
+@media screen and (max-width: 70rem) {
+  .login-container {
     width: 100%;
     margin: 0;
   }
-  .content-container {
+
+  .conte-container {
     width: 100%;
   }
+
 }
 
-
 .form-section {
-  width: 40%;
-  background-color: white;
-  padding: 2.5rem 2rem;
+  width: 50%;
+  background-color: rgb(239, 245, 240);
+  padding: 2.5rem 5rem;
   display: flex;
   align-items: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 .form-wrapper {
-  width: 75%;
+  width: 85%;
   margin: 0 auto;
 }
 
@@ -117,23 +125,24 @@ img {
 }
 
 .logo-container img {
-  border-radius: 20px;
+  border-radius: 50px;
 }
 
-.form-wrapper > h2 {
+.form-wrapper>h2 {
   margin-bottom: 0.1rem;
 }
-.form-wrapper > p {
+
+.form-wrapper>p {
   font-size: 0.875rem;
   font-weight: 500;
-  color: var(--text-light);
+  color: var(--text-dark);
   margin-bottom: 2rem;
 }
 
 .input-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2em;
   margin-bottom: 1rem;
 }
 
@@ -142,11 +151,13 @@ img {
   flex-direction: column;
   gap: 0.2rem;
 }
+
 .form-group label {
   font-size: 0.9375rem;
   font-weight: 600;
   color: #16164d;
 }
+
 .form-group input {
   font-size: 0.875rem;
   font-weight: 500;
@@ -155,6 +166,7 @@ img {
   border: 2px solid var(--primary-lighter);
   border-radius: 0.3rem;
 }
+
 .form-group input:focus {
   border: 2px solid #16164d;
 }
@@ -184,7 +196,7 @@ input[type="checkbox"] {
   width: 1rem;
   height: 1rem;
   margin-right: 0.3rem;
-  border: 1px solid var(--text-light);
+  border: 1px solid var(--text-dark);
   border-radius: 2px;
 }
 
@@ -203,6 +215,7 @@ input[type="checkbox"]::before {
 input[type="checkbox"]:checked::before {
   transform: scale(1);
 }
+
 .remember-me input:checked {
   background: var(--primary-gradient);
 }
@@ -211,13 +224,16 @@ input[type="checkbox"]:checked::before {
   color: var(--text-dark);
   user-select: none;
 }
+
 .remember-forgot a {
   color: var(--primary);
 }
+
 .remember-forgot a:hover {
   text-decoration: underline;
   text-decoration-color: var(--primary);
 }
+
 
 .login-btn,
 .google-signin {
@@ -236,6 +252,7 @@ input[type="checkbox"]:checked::before {
   color: white;
   background: var(--primary-gradient);
 }
+
 .login-btn:hover {
   opacity: 0.9;
 }
@@ -248,6 +265,7 @@ input[type="checkbox"]:checked::before {
   text-align: center;
   position: relative;
 }
+
 .or-divider::before {
   content: "";
   position: absolute;
@@ -257,6 +275,7 @@ input[type="checkbox"]:checked::before {
   width: 45%;
   background-color: var(--text-light);
 }
+
 .or-divider::after {
   content: "";
   position: absolute;
@@ -270,13 +289,14 @@ input[type="checkbox"]:checked::before {
 .google-signin {
   border: 2px solid var(--primary-lighter);
 }
+
 .google-signin object {
   width: 1.5rem;
   height: 1.5rem;
 }
 
 @media screen and (max-width: 50rem) {
-  .container {
+  .login-container {
     max-width: 80%;
     flex-direction: column;
     margin-inline: 0;
@@ -290,41 +310,50 @@ input[type="checkbox"]:checked::before {
   .image-section {
     height: 25vh;
   }
-  .content-container {
+
+  .conte-container {
     inset: 0;
     transform: translate(0, 0);
-    padding: 1rem 1.6rem;
+    padding: 5.1rem 1.1rem;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .content-container h1 {
-    font-size: 1.4rem;
+
+  .conte-container h1 {
+    font-size: 1.3rem;
     font-weight: 700;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.1rem;
+    margin-top: 1.1rem;
   }
-  .content-container p {
-    font-size: 0.75rem;
+
+  .conte-container p {
+    font-size: 1.10rem;
   }
 
   .form-section {
     flex: 1;
-    padding: 1rem 1rem;
+    padding: 1rem 6rem;
   }
+
   .logo-container {
     margin-bottom: 1rem;
   }
-  .form-wrapper > h2 {
+
+  .form-wrapper>h2 {
     font-size: 1.25rem;
   }
-  .form-wrapper > p {
+
+  .form-wrapper>p {
     margin-bottom: 1rem;
   }
+
   .form-wrapper button {
     font-size: 0.875rem;
   }
+
   .or-divider {
     font-weight: 500;
     margin-block: 0.6rem;
@@ -332,56 +361,22 @@ input[type="checkbox"]:checked::before {
 }
 
 @media screen and (max-width: 36.25rem) {
-  .container {
+  .login-container {
     max-width: 100%;
   }
+
   .form-wrapper {
     width: 100%;
   }
+
 }
 
-/* css para parte do cadastro👇*/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-.menulogin {
-  min-height: 70vh;;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 2%;
-  margin-bottom: 2%;
-  margin-inline-start: 35%;
-}
-.menulogin {
-  position: relative;
-  max-width: 370px;
-  width: 100%;
-  padding: 25px;
-  border-radius: 20px;
-  background-color: #fff;
-  box-shadow: 0 8px 25px #7a260f90;
-}
-.menulogin header {
-  font-size: 22px;
-  font-weight: 600;
-  color: #333;
-}
-.menulogin form {
-  margin-top: 30px;
-}
-form .field {
-  margin-bottom: 20px;
-}
 form .input-field {
   position: relative;
-  height: 55px;
+  height: 45px;
   width: 100%;
 }
+
 .input-field input {
   height: 100%;
   width: 100%;
@@ -391,19 +386,7 @@ form .input-field {
   padding: 0 15px;
   border: 1px solid #d1d1d1;
 }
-.invalid input {
-  border-color: #d93025;
-}
-.input-field .show-hide {
-  position: absolute;
-  right: 13px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 18px;
-  color: #919191;
-  cursor: pointer;
-  padding: 3px;
-}
+
 .field .error {
   display: flex;
   align-items: center;
@@ -412,30 +395,20 @@ form .input-field {
   font-size: 13px;
   display: none;
 }
-.invalid .error {
-  display: flex;
-}
-.error .error-icon {
-  margin-right: 6px;
-  font-size: 15px;
-}
-.create-password .error {
-  align-items: flex-start;
-}
-.create-password .error-icon {
-  margin-top: 4px;
-}
+
 .button {
-  margin: 25px 0 6px;
+  margin: 25px 6px;
 }
+
 .button input {
   color: #fff;
   font-size: 16px;
   font-weight: 400;
-  background: linear-gradient(59deg, #c8523d -1.21%, #7a260f 101.21%, #7a260f 101.21%);
+  background: linear-gradient(59deg, #3671fd -1.21%, #3671fd 101.21%, #fff 101.21%);
   cursor: pointer;
   transition: all 0.3s ease;
 }
+
 .button input:hover {
   transform: scale(0.9);
 }
