--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,4 +1,8 @@
-.l-produtos {
+body{
+    background-color: rgb(210, 210, 210);
+   font-family: 'Times New Roman', Times, serif;
+}
+.t-produtos {
     margin: 0%;
     margin-bottom: 10px;
 }
@@ -6,21 +10,31 @@
 .produto {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     position: relative;
+    border-radius: 10px;
 }
 
 .produto img:hover {
     cursor: pointer;
+    box-shadow: 0px 0px 10px 6px rgba(0, 0, 0, 0.2);
+}
+
+.produto img {
+    width: 270px;
+    margin: auto;
+    display: block;
+
 }
 
 .produto-icons {
     background-color: #f8f8f8;
-    padding: 5px 10px;
+    padding: 1px 10px;
+    border-radius: 20px;
 }
 
 .icon-button {
     background-color: transparent;
     border: none;
-    font-size: 20px;
+    font-size: 18px;
     transition: color 0.3s;
 }
 
@@ -29,10 +43,10 @@
 }
 
 .produto-descricao {
-    font-size: 13px;
+    font-size: 17px;
     color: #434141;
 }
 
 .produto-preco {
-    font-size: 20px;
+    font-size: 23px;
 }
