--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,9 @@
 }
 body{
       background-color: rgb(210, 210, 210);
+     font-family: 'Times New Roman', Times, serif;
 }
 #logo {
     width: 90px;
     height: 24px;
 }
-
